@@ -231,6 +231,7 @@ lighter making things easier to read.
 * Have a checkered background on images on the description pages and in
   galeries to make transparency visible (just MonoBook for now, will add the
   rest soon).
+* (bug 7782) Standardisation of file info at image description pages.
 
 == Languages updated ==
 
@@ -268,6 +269,7 @@ lighter making things easier to read.
 * Slovak (sk)
 * Swedish (sv)
 * Zealandic (zea)
+* Cantonese (zh-yue)
 
 == Compatibility ==
 
